browser/themes/shared/tabbrowser/content-area.css
/
*
This
Source
Code
Form
is
subject
to
the
terms
of
the
Mozilla
Public
*
License
v
.
2
.
0
.
If
a
copy
of
the
MPL
was
not
distributed
with
this
*
file
You
can
obtain
one
at
http
:
/
/
mozilla
.
org
/
MPL
/
2
.
0
/
.
*
/
namespace
html
url
(
"
http
:
/
/
www
.
w3
.
org
/
1999
/
xhtml
"
)
;
:
root
{
/
*
-
-
tabpanel
-
background
-
color
matches
in
-
content
-
page
-
background
in
newtab
(
browser
/
extensions
/
newtab
/
content
-
src
/
styles
/
_variables
.
scss
)
*
/
-
-
tabpanel
-
background
-
color
:
#
f9f9fb
;
media
(
-
moz
-
content
-
prefers
-
color
-
scheme
:
dark
)
{
-
-
tabpanel
-
background
-
color
:
#
2b2a33
;
}
&
[
privatebrowsingmode
=
"
temporary
"
]
{
/
*
Value
for
-
-
background
-
color
-
canvas
in
aboutPrivateBrowsing
.
css
.
!
important
overrides
the
direct
setting
of
this
variable
in
ThemeVariableMap
.
sys
.
mjs
when
the
user
has
a
theme
that
defines
ntp_background
.
*
/
-
-
tabpanel
-
background
-
color
:
#
25003e
!
important
;
/
*
stylelint
-
disable
-
next
-
line
media
-
query
-
no
-
invalid
*
/
media
-
moz
-
pref
(
"
browser
.
privatebrowsing
.
felt
-
privacy
-
v1
"
)
{
-
-
tabpanel
-
background
-
color
:
linear
-
gradient
(
45deg
#
722291
0
%
#
45278d
50
%
#
393473
100
%
)
!
important
;
}
}
}
#
navigator
-
toolbox
{
border
-
bottom
:
0
.
01px
solid
var
(
-
-
chrome
-
content
-
separator
-
color
)
;
/
*
stylelint
-
disable
-
next
-
line
media
-
query
-
no
-
invalid
*
/
media
-
moz
-
pref
(
"
sidebar
.
revamp
"
)
{
/
*
This
reserves
space
for
the
content
area
outline
*
/
border
-
bottom
-
color
:
var
(
-
-
toolbar
-
bgcolor
)
;
}
/
*
stylelint
-
disable
-
next
-
line
media
-
query
-
no
-
invalid
*
/
media
-
moz
-
pref
(
"
sidebar
.
verticalTabs
"
)
{
border
-
bottom
-
style
:
none
;
}
}
/
*
Needed
to
ensure
#
sidebar
-
wrapper
is
full
height
when
vertical
tabs
are
not
enabled
*
/
#
browser
{
position
:
relative
;
}
#
browser
#
tabbrowser
-
tabbox
#
tabbrowser
-
tabpanels
.
browserSidebarContainer
{
/
*
Allow
devtools
with
large
specified
width
/
height
to
shrink
*
/
min
-
width
:
0
;
min
-
height
:
0
;
}
#
browser
:
not
(
.
browser
-
toolbox
-
background
)
{
background
-
color
:
var
(
-
-
toolbar
-
bgcolor
)
;
color
:
var
(
-
-
toolbar
-
color
)
;
:
root
[
lwtheme
]
&
{
/
*
Ensure
toolbar
color
displays
on
top
of
the
frame
/
toolbox
color
to
*
guarantee
full
opacity
*
/
background
-
color
:
var
(
-
-
lwt
-
accent
-
color
)
;
background
-
image
:
linear
-
gradient
(
var
(
-
-
toolbar
-
bgcolor
)
var
(
-
-
toolbar
-
bgcolor
)
)
;
}
}
#
tabbrowser
-
tabbox
{
position
:
relative
;
z
-
index
:
var
(
-
-
browser
-
area
-
z
-
index
-
tabbox
)
;
margin
:
0
;
/
*
stylelint
-
disable
-
next
-
line
media
-
query
-
no
-
invalid
*
/
media
-
moz
-
pref
(
"
sidebar
.
revamp
"
)
{
outline
:
0
.
01px
solid
var
(
-
-
chrome
-
content
-
separator
-
color
)
;
box
-
shadow
:
var
(
-
-
content
-
area
-
shadow
)
;
/
*
stylelint
-
disable
-
next
-
line
media
-
query
-
no
-
invalid
*
/
media
-
moz
-
pref
(
"
sidebar
.
revamp
.
round
-
content
-
area
"
)
{
:
root
:
not
(
[
inDOMFullscreen
]
)
&
[
sidebar
-
shown
]
{
overflow
:
clip
;
border
-
start
-
end
-
radius
:
var
(
-
-
border
-
radius
-
medium
)
;
/
*
stylelint
-
disable
-
next
-
line
media
-
query
-
no
-
invalid
*
/
media
-
moz
-
pref
(
"
sidebar
.
position_start
"
)
{
border
-
start
-
start
-
radius
:
var
(
-
-
border
-
radius
-
medium
)
;
border
-
start
-
end
-
radius
:
0
;
}
}
}
}
}
/
*
We
set
large
flex
on
both
containers
to
allow
the
devtools
toolbox
to
*
set
a
flex
value
itself
.
We
don
'
t
want
the
toolbox
to
actually
take
up
free
*
space
but
we
do
want
it
to
collapse
when
the
window
shrinks
and
with
*
flex
:
0
it
can
'
t
.
*
*
When
the
toolbox
is
on
the
bottom
it
'
s
a
sibling
of
browserStack
and
when
*
it
'
s
on
the
side
it
'
s
a
sibling
of
browserContainer
.
*
/
.
browserContainer
{
flex
:
10000
10000
;
/
*
To
contain
the
status
panel
*
/
position
:
relative
;
/
*
.
browserContainer
only
contains
the
devtools
when
docked
horizontally
*
/
min
-
height
:
0
;
}
.
browserSidebarContainer
{
position
:
absolute
;
inset
:
0
;
}
.
sidebar
-
browser
-
stack
{
flex
:
1
;
}
.
browserStack
{
flex
:
10000
10000
;
/
*
Prevent
shrinking
the
page
content
to
0
height
and
width
*
/
min
-
height
:
25px
;
min
-
width
:
25px
;
}
#
tabbrowser
-
tabpanels
{
appearance
:
none
;
padding
:
0
;
color
-
scheme
:
unset
;
background
:
var
(
-
-
tabpanel
-
background
-
color
)
;
display
:
flex
;
&
[
pendingpaint
]
{
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
pendingpaint
.
png
"
)
;
background
-
repeat
:
no
-
repeat
;
background
-
position
:
center
center
;
background
-
size
:
30px
;
}
browser
:
is
(
[
blank
]
[
pendingpaint
]
)
{
opacity
:
0
;
}
browser
[
type
=
"
content
"
]
{
color
-
scheme
:
env
(
-
moz
-
content
-
preferred
-
color
-
scheme
)
;
}
browser
[
tabDialogShowing
]
{
-
moz
-
user
-
focus
:
none
!
important
;
}
&
[
splitview
]
{
-
-
panel
-
min
-
width
:
140px
;
.
split
-
view
-
panel
{
position
:
relative
;
flex
:
1
;
min
-
width
:
var
(
-
-
panel
-
min
-
width
)
;
max
-
width
:
calc
(
100
%
-
var
(
-
-
panel
-
min
-
width
)
)
;
margin
:
var
(
-
-
space
-
xsmall
)
;
}
.
browserStack
{
border
-
radius
:
var
(
-
-
border
-
radius
-
medium
)
;
overflow
:
clip
;
outline
:
var
(
-
-
border
-
width
)
solid
var
(
-
-
border
-
color
)
;
.
deck
-
selected
>
.
browserContainer
>
&
{
outline
:
var
(
-
-
focus
-
outline
)
;
}
}
.
split
-
view
-
panel
[
column
=
"
0
"
]
{
order
:
0
;
margin
-
inline
-
end
:
0
;
}
.
split
-
view
-
splitter
{
order
:
1
;
flex
:
none
;
}
.
split
-
view
-
panel
[
column
=
"
1
"
]
{
order
:
2
;
margin
-
inline
-
start
:
0
;
}
/
*
Panels
with
a
custom
width
shouldn
'
t
grow
.
*
/
.
split
-
view
-
panel
[
width
]
{
flex
:
none
;
}
/
*
Display
split
view
footer
within
inactive
panels
.
*
/
.
split
-
view
-
panel
:
not
(
.
deck
-
selected
)
>
split
-
view
-
footer
{
display
:
inherit
;
}
}
}
/* ... */

