Bug 1941635 - Avoid clipping dialogs when rounding browser content container corners. r=jsudiaman,desktop-theme-reviewers,tabbrowser-reviewers,emilio
- Append the dialogStack-s to the .browserSidebarContainer rather than inside the browserStack
- Move the content's border-radius and overflow:clip down to the .browserContainer
- Apply the --tabpanel-background-color bgcolor to each panel rather than the tabpanels element
- Add the border-radius when needed to the dialog overlay
- When 'round-content-area' pref is true, apply radius to tab panel top border, except on the outer edges
- Clip inactive tab panels so dialogs are also clipped and don't show behind selected tab panel
- Leave split-view panels as-is apart from moving the border-radius to the .browserContainer
- Nudge non-content dialogs up a bit more when they are in split-view panels

Differential Revision: https://phabricator.services.mozilla.com/D268178

UltraBlame original commit: ccf3e72fb6bbb41328b79e82e0d89f89a9b7c8fe

--- a/browser/themes/shared/tabbrowser/content-area.css
+++ b/browser/themes/shared/tabbrowser/content-area.css
@@ -290,6 +290,24 @@ important
 ;
 }
 }
+-
+-
+dialog
+-
+backdrop
+-
+color
+:
+rgba
+(
+28
+27
+34
+0
+.
+45
+)
+;
 }
 #
 navigator
@@ -625,211 +643,6 @@ margin
 :
 0
 ;
-/
-*
-stylelint
--
-disable
--
-next
--
-line
-media
--
-query
--
-no
--
-invalid
-*
-/
-media
--
-moz
--
-pref
-(
-"
-sidebar
-.
-revamp
-"
-)
-{
-outline
-:
-0
-.
-01px
-solid
-var
-(
--
--
-chrome
--
-content
--
-separator
--
-color
-)
-;
-box
--
-shadow
-:
-var
-(
--
--
-content
--
-area
--
-shadow
-)
-;
-/
-*
-stylelint
--
-disable
--
-next
--
-line
-media
--
-query
--
-no
--
-invalid
-*
-/
-media
--
-moz
--
-pref
-(
-"
-sidebar
-.
-revamp
-.
-round
--
-content
--
-area
-"
-)
-{
-:
-root
-:
-not
-(
-[
-inDOMFullscreen
-]
-)
-&
-[
-sidebar
--
-shown
-]
-{
-overflow
-:
-clip
-;
-border
--
-start
--
-end
--
-radius
-:
-var
-(
--
--
-border
--
-radius
--
-medium
-)
-;
-/
-*
-stylelint
--
-disable
--
-next
--
-line
-media
--
-query
--
-no
--
-invalid
-*
-/
-media
--
-moz
--
-pref
-(
-"
-sidebar
-.
-position_start
-"
-)
-{
-border
--
-start
--
-start
--
-radius
-:
-var
-(
--
--
-border
--
-radius
--
-medium
-)
-;
-border
--
-start
--
-end
--
-radius
-:
-0
-;
-}
-}
-}
-}
 }
 /
 *
@@ -964,6 +777,234 @@ height
 :
 0
 ;
+/
+*
+We
+want
+to
+be
+able
+to
+show
+the
+frame
+color
+behind
+the
+clipped
+radiused
+corner
+*
+/
+background
+:
+var
+(
+-
+-
+tabpanel
+-
+background
+-
+color
+)
+;
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+-
+moz
+-
+pref
+(
+"
+sidebar
+.
+revamp
+"
+)
+{
+outline
+:
+0
+.
+01px
+solid
+var
+(
+-
+-
+chrome
+-
+content
+-
+separator
+-
+color
+)
+;
+box
+-
+shadow
+:
+var
+(
+-
+-
+content
+-
+area
+-
+shadow
+)
+;
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+-
+moz
+-
+pref
+(
+"
+sidebar
+.
+revamp
+.
+round
+-
+content
+-
+area
+"
+)
+{
+overflow
+:
+clip
+;
+:
+root
+:
+not
+(
+[
+inDOMFullscreen
+]
+)
+#
+tabbrowser
+-
+tabbox
+[
+sidebar
+-
+shown
+]
+&
+{
+media
+-
+moz
+-
+pref
+(
+"
+sidebar
+.
+position_start
+"
+)
+{
+border
+-
+start
+-
+start
+-
+radius
+:
+var
+(
+-
+-
+border
+-
+radius
+-
+medium
+)
+;
+}
+media
+not
+-
+moz
+-
+pref
+(
+"
+sidebar
+.
+position_start
+"
+)
+{
+border
+-
+start
+-
+end
+-
+radius
+:
+var
+(
+-
+-
+border
+-
+radius
+-
+medium
+)
+;
+}
+}
+}
+}
 }
 .
 browserSidebarContainer
@@ -1042,19 +1083,6 @@ color
 scheme
 :
 unset
-;
-background
-:
-var
-(
--
--
-tabpanel
--
-background
--
-color
-)
 ;
 display
 :
@@ -1250,8 +1278,57 @@ xsmall
 )
 ;
 }
+/
+*
+Ensure
+any
+dialogs
+are
+clipped
+in
+an
+inactive
+/
+not
+-
+selected
+panel
 .
-browserStack
+*
+/
+:
+root
+:
+not
+(
+[
+inDOMFullscreen
+]
+)
+&
+>
+.
+split
+-
+view
+-
+panel
+:
+not
+(
+.
+deck
+-
+selected
+)
+{
+overflow
+:
+clip
+;
+}
+.
+browserContainer
 {
 border
 -
@@ -1292,16 +1369,40 @@ border
 color
 )
 ;
+/
+*
+The
+selected
+panel
+'
+s
+dialogs
+need
+to
+sit
+above
+the
+non
+-
+selected
+tab
+panels
+.
+*
+/
 .
 deck
 -
 selected
 >
-.
-browserContainer
->
 &
 {
+z
+-
+index
+:
+1
+;
 outline
 :
 var
@@ -3280,6 +3381,43 @@ top
 -
 5px
 ;
+/
+*
+When
+the
+dialog
+is
+in
+a
+splitview
+the
+offset
+is
+a
+little
+larger
+*
+/
+.
+deck
+-
+selected
+.
+split
+-
+view
+-
+panel
+&
+{
+margin
+-
+top
+:
+-
+8px
+;
+}
 }
 /
 *
@@ -3653,6 +3791,170 @@ width
 34em
 ;
 }
+/
+*
+Radius
+the
+backdrop
+so
+it
+doesnt
+occlude
+the
+radiused
+.
+browserContainer
+below
+it
+*
+/
+:
+root
+:
+not
+(
+[
+inDOMFullscreen
+]
+)
+#
+tabbrowser
+-
+tabbox
+[
+sidebar
+-
+shown
+]
+.
+dialogOverlay
+[
+topmost
+=
+"
+true
+"
+]
+{
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+-
+moz
+-
+pref
+(
+"
+sidebar
+.
+revamp
+.
+round
+-
+content
+-
+area
+"
+)
+{
+border
+-
+start
+-
+end
+-
+radius
+:
+var
+(
+-
+-
+border
+-
+radius
+-
+medium
+)
+;
+/
+*
+stylelint
+-
+disable
+-
+next
+-
+line
+media
+-
+query
+-
+no
+-
+invalid
+*
+/
+media
+-
+moz
+-
+pref
+(
+"
+sidebar
+.
+position_start
+"
+)
+{
+border
+-
+start
+-
+start
+-
+radius
+:
+var
+(
+-
+-
+border
+-
+radius
+-
+medium
+)
+;
+border
+-
+start
+-
+end
+-
+radius
+:
+0
+;
+}
+}
+}
 .
 dialogOverlay
 [
@@ -3676,14 +3978,15 @@ background
 -
 color
 :
-rgba
+var
 (
-28
-27
-34
-0
-.
-45
+-
+-
+dialog
+-
+backdrop
+-
+color
 )
 ;
 }
